--- a/source/catalog.html
+++ b/source/catalog.html
@@ -51,10 +51,10 @@
         <ul>
           <!-- card-1 -->
           <li class="product-card">
-            <a class="product-card-link" href="#">
-              <img class="product-card-image" src="/images/catalog-cat-energy-pro-500-chiсken-mobile.png" width="68" height="86" alt="Питание 500 гр с курицей">
+            <a class="product__card-link" href="#">
+              <img class="product__card-image" src="/images/catalog-cat-energy-pro-500-chiсken-mobile.png" width="68" height="86" alt="Питание 500 гр с курицей">
             </a>
-            <a class="product-card-link" href="#">
+            <a class="product__card-link" href="#">
               <h3 class="product-card-title">Cat Energy PRO 500 г</h3>
             </a>
             <dl class="card-param">
