--- a/source/catalog.html
+++ b/source/catalog.html
@@ -227,8 +227,8 @@
             </li>
 
             <li class="product-card">
-              <a class="product-card-link" href="#">
-                <h3 class="product-card-title">Молоко</h3>
+              <a class="product-card__link" href="#">
+                <h3 class="product-card__title">Молоко</h3>
               </a>
               <dl class="product-card__param filter">
                 <dt class="filter__name filter-weight">1 литр</dt>
@@ -238,8 +238,8 @@
             </li>
 
             <li class="product-card">
-              <a class="product-card-link" href="#">
-                <h3 class="product-card-title">Витамины</h3>
+              <a class="product-card__link" href="#">
+                <h3 class="product-card__title">Витамины</h3>
               </a>
               <dl class="product-card__param filter">
                 <dt class="filter__name filter-weight">1 упаковка (30 г)</dt>
