--- a/source/index.html
+++ b/source/index.html
@@ -105,7 +105,7 @@
             <dt class="statistics__value">60 дней</dt>
             <dd class="statistics__parameter">затрачено времени</dd>
           </div>
-          <div class="example__statistics-item--total">
+          <div class="example__statistics-item example__statistics-item--total">
             <dt class="statistics__expenses">Затраты на питание:</dt>
             <dd class="statistics__cost">15 000 руб.</dd>
           </div>
