--- a/source/catalog.html
+++ b/source/catalog.html
@@ -13,8 +13,16 @@
   <header class="main-header">
     <div class="screen-stretch__wrapper">
       <a class="main-header__logo" href="index.html">
-        <img class="main-header__logo-pic" src="/images/logo-pic.svg" width="33" height="38" alt="Иконка логотипа Кэт Энерджи">
-        <img class="main-header__logo-text" src="/images/logo-text.svg" width="100" height="18" alt="Текстовое название логотипа Кэт Энерджи">
+        <picture>
+          <source media="(min-width: 1400px)" width="70" height="60" type="image/svg+xml" srcset="images/logo-pic-desktop.svg">
+          <source media="(min-width: 768px)" width="50" height="60" type="image/svg+xml" srcset="images/logo-pic-tablet.svg">
+          <img class="logo-pic" src="images/logo-pic-mobile.svg" width="33" height="38" alt="Иконка логотипа Кэт Энерджи">
+        </picture>
+        <picture>
+          <source media="(min-width: 1400px)" width="118" height="20" type="image/svg+xml" srcset="images/logo-text-desktop.svg">
+          <source media="(min-width: 768px)" width="100" height="18" type="image/svg+xml" srcset="images/logo-text-tablet.svg">
+          <img class="logo-text" src="images/logo-text-mobile.svg" width="100" height="20" alt="Текстовое название логотипа Кэт Энерджи">
+        </picture>
       </a>
       <nav class="main-header__main-nav main-nav">
         <button class="main-nav__toggle" type="button">
@@ -23,19 +31,15 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list menu-list">
             <li class="menu-list__item">
-              <a href="#">
+              <a href="index.html">
                 Главная
               </a>
             </li>
             <li class="menu-list__item menu-list__item--current">
-              <a href="catalog.html">
-                Каталог продукции
-              </a>
+              <a href="catalog.html">Каталог продукции</a>
             </li>
             <li class="menu-list__item">
-              <a href="#">
-                Подбор программы
-              </a>
+              <a href="#">Подбор программы</a>
             </li>
           </ul>
         </div>
@@ -55,7 +59,10 @@
             <!-- card-1 -->
             <li class="product-card">
               <a class="product-card__link" href="#">
-                <img class="product-card__image" src="/images/catalog-cat-energy-pro-500-chiсken-mobile.png" width="68" height="86" alt="Питание 500 гр с курицей">
+                <picture>
+                  <source media="(min-width: 768px)" width="161" height="172" type="image/png" srcset="images/catalog-pro-500-chicken-tablet@1x.png 1x, images/catalog-pro-500-chicken-tablet@2x.png 2x">
+                  <img class="product-card__image" src="images/catalog-pro-500-chicken-mobile@1x.png" srcset="images/catalog-pro-500-chicken-mobile@2x.png 2x" width="68" height="86" alt="Питание 500 гр с курицей">
+                </picture>
               </a>
               <a class="product-card__link" href="#">
                 <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
@@ -74,7 +81,11 @@
             <!-- card-2 -->
             <li class="product-card">
               <a class="product-card__link" href="#">
-                <img class="product-card__image" src="/images/catalog-cat-energy-pro-1000-chiсken-mobile.png" width="68" height="86" alt="Питание 1000 гр с курицей">
+                <picture>
+                  <source media="(min-width: 1440px)" width="172" height="196" type="image/png" srcset="images/catalog-pro-1000-chicken-desktop@1x.png 1x, images/catalog-pro-1000-chicken-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" width="168" height="206" type="image/png" srcset="images/catalog-pro-1000-chicken-tablet@1x.png 1x, images/catalog-pro-1000-chicken-tablet@2x.png 2x">
+                  <img class="product-card__image" src="images/catalog-pro-1000-chicken-mobile@1x.png" srcset="images/catalog-pro-1000-chicken-mobile@2x.png 2x" width="84" height="100" alt="Питание 1000 гр с курицей">
+                </picture>
               </a>
               <a class="product-card__link" href="#">
                 <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
@@ -93,7 +104,10 @@
             <!-- card-3 -->
             <li class="product-card">
               <a class="product-card__link" href="#">
-                <img class="product-card__image" src="/images/catalog-cat-energy-pro-500-fish-mobile.png" width="68" height="86" alt="Питание 500гр с рыбой">
+                <picture>
+                  <source media="(min-width: 768px)" width="161" height="172" type="image/png" srcset="images/catalog-pro-500-fish-tablet@1x.png 1x, images/catalog-pro-500-fish-tablet@2x.png 2x">
+                  <img class="product-card__image" src="images/catalog-pro-500-fish-mobile@1x.png" srcset="images/catalog-pro-500-fish-mobile@2x.png 2x" width="68" height="86" alt="Питание 500гр с рыбой">
+                </picture>
               </a>
               <a class="product-card__link" href="#">
                 <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
@@ -112,7 +126,11 @@
             <!-- card-4 -->
             <li class="product-card">
               <a class="product-card-link" href="#">
-                <img class="product-card-image" src="/images/catalog-cat-energy-pro-1000-fish-mobile.png" width="68" height="86" alt="Питание 1000гр с рыбой">
+                <picture>
+                  <source media="(min-width: 1440px)" width="172" height="196" type="image/png" srcset="images/catalog-pro-1000-fish-desktop@1x.png 1x, images/catalog-pro-1000-fish-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" width="168" height="206" type="image/png" srcset="images/catalog-pro-1000-fish-tablet@1x.png 1x, images/catalog-pro-1000-fish-tablet@2x.png 2x">
+                  <img class="product-card__image" src="images/catalog-pro-1000-fish-mobile@1x.png" srcset="images/catalog-pro-1000-fish-mobile@2x.png 2x" width="84" height="100" alt="Питание 1000 гр с рыбой">
+                </picture>
               </a>
               <a class="product-card-link" href="#">
                 <h3 class="product-card-title">Cat Energy PRO 1000 г</h3>
@@ -131,7 +149,10 @@
             <!-- card-5 -->
             <li class="product-card">
               <a class="product-card-link" href="#">
-                <img class="product-card-image" src="/images/catalog-cat-energy-slim-500-buckwheat-mobile.png" width="68" height="86" alt="Питание 500гр с гречкой">
+                <picture>
+                  <source media="(min-width: 768px)" width="161" height="172" type="image/png" srcset="images/catalog-slim-500-buckwheat-tablet@1x.png 1x, images/catalog-slim-500-buckwheat-tablet@2x.png 2x">
+                  <img class="product-card__image" src="images/catalog-slim-500-buckwheat-mobile@1x.png" srcset="images/catalog-slim-500-buckwheat-mobile@2x.png 2x" width="68" height="86" alt="Питание 500гр с гречкой">
+                </picture>
               </a>
               <a class="product-card-link" href="#">
                 <h3 class="product-card-title">Cat Energy SLIM 500 г</h3>
@@ -150,7 +171,11 @@
             <!-- card-6 -->
             <li class="product-card">
               <a class="product-card-link" href="#">
-                <img class="product-card-image" src="/images/catalog-cat-energy-slim-1000-buckwheat-mobile.png" width="68" height="86" alt="Питание 1000гр с гречкой">
+                <picture>
+                  <source media="(min-width: 1440px)" width="172" height="196" type="image/png" srcset="images/catalog-slim-1000-buckwheat-desktop@1x.png 1x, images/catalog-slim-1000-buckwheat-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" width="168" height="206" type="image/png" srcset="images/catalog-slim-1000-buckwheat-tablet@1x.png 1x, images/catalog-slim-1000-buckwheat-tablet@2x.png 2x">
+                  <img class="product-card__image" src="images/catalog-slim-1000-buckwheat-mobile@1x.png" srcset="images/catalog-slim-1000-buckwheat-mobile@2x.png 2x" width="84" height="100" alt="Питание 1000 гр с гречкой">
+                </picture>
               </a>
               <a class="product-card-link" href="#">
                 <h3 class="product-card-title">Cat Energy SLIM 1000 г</h3>
@@ -170,6 +195,10 @@
             <li class="product-card">
               <a class="product-card-link" href="#">
                 <img class="product-card-image" src="/images/catalog-cat-energy-slim-500-rice-pc.png" width="68" height="86" alt="Питание 500гр с рисом">
+                <picture>
+                  <source media="(min-width: 768px)" width="161" height="172" type="image/png" srcset="images/catalog-slim-500-rice-tablet@1x.png 1x, images/catalog-slim-500-rice-tablet@2x.png 2x">
+                  <img class="product-card__image" src="images/catalog-slim-500-rice-mobile@1x.png" srcset="images/catalog-slim-500-rice-mobile@2x.png 2x" width="68" height="86" alt="Питание 500гр с рисом">
+                </picture>
               </a>
               <a class="product-card-link" href="#">
                 <h3 class="product-card-title">Cat Energy SLIM 500 г</h3>
@@ -276,7 +305,11 @@
         <div class="screen-stretch__wrapper">
           <h3 class="main-contacts__title">Приглашаем к сотрудничеству дилеров!</h3>
           <address class="main-contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
-          <img src="images/map.png" width="320" height="362" alt="Карта с указанием адреса офиса">
+          <picture>
+            <source media="(min-width: 1440px)" width="1440" height="400" type="image/png" srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" width="768" height="400" type="image/png" srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png 2x">
+            <img class="main-contacts-map" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320" height="362" alt="Карта с указанием адреса офиса">
+          </picture>
         </div>
       </section>
     </div>
@@ -285,7 +318,9 @@
   <footer class="main-footer">
     <div class="screen-stretch__wrapper">
       <a class="main-footer__logo" href="#">
-        <img class="main-footer__logo-text logo-text" src="/images/logo-text.svg" width="100" height="18" alt="Текстовое название логотипа Кэт Энерджи">
+        <picture>
+          <img class="logo-text" src="images/logo-text-mobile.svg" width="128" height="24" alt="Текстовое название логотипа Кэт Энерджи">
+        </picture>
       </a>
 
       <div class="main-footer__social social">
