--- a/source/index.html
+++ b/source/index.html
@@ -13,8 +13,16 @@
   <header class="main-header">
     <div class="screen-stretch__wrapper">
       <a class="main-header__logo" href="#">
-        <img class="main-header__logo-pic" src="/images/logo-pic.svg" width="33" height="38" alt="Иконка логотипа Кэт Энерджи">
-        <img class="main-header__logo-text logo-text" src="/images/logo-text.svg" width="100" height="18" alt="Текстовое название логотипа Кэт Энерджи">
+        <picture>
+          <source media="(min-width: 1400px)" width="70" height="60" type="image/svg+xml" srcset="images/logo-pic-desktop.svg">
+          <source media="(min-width: 768px)" width="50" height="60" type="image/svg+xml" srcset="images/logo-pic-tablet.svg">
+          <img class="logo-pic" src="images/logo-pic-mobile.svg" width="33" height="38" alt="Иконка логотипа Кэт Энерджи">
+        </picture>
+        <picture>
+          <source media="(min-width: 1400px)" width="118" height="20" type="image/svg+xml" srcset="images/logo-text-desktop.svg">
+          <source media="(min-width: 768px)" width="100" height="18" type="image/svg+xml" srcset="images/logo-text-tablet.svg">
+          <img class="logo-text" src="images/logo-text-mobile.svg" width="100" height="20" alt="Текстовое название логотипа Кэт Энерджи">
+        </picture>
       </a>
       <nav class="main-header__main-nav main-nav">
         <button class="main-nav__toggle" type="button">
@@ -49,7 +57,13 @@
         <header class="nutrition-programs__header">
           <h1 class="nutrition-programs__title">Функциональное питание для котов</h1>
           <p class="nutrition-programs__description">Занялся собой? Займись котом!</p>
-          <img class="nutrition-programs__img" src="/images/index-can-mobile.png" width="280" height="270" alt="Упаковка питания Кэт Энерджи с курицей">
+
+          <picture>
+            <source media="(min-width: 1440px)" width="552" height="500" type="image/png" srcset="images/index-can-desktop@1x.png 1x, images/index-can-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" width="710" height="610" type="image/png" srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png 2x">
+            <img class="nutrition-programs__img" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" width="280" height="270" alt="Упаковка питания Кэт Энерджи с курицей">
+          </picture>
+
           <button class="nutrition-programs__button" type="button">Подобрать программу</button>
         </header>
       </div>
@@ -110,8 +124,16 @@
           </div>
         </dl>
 
-        <img src="#" width="280" height="256" alt="Сравнение кота до и после применения питания">
-
+        <div class="example__slider">
+          <picture>
+            <source media="(min-width: 768px)" width="560" height="512" type="image/png" srcset="images/fat-cat-tablet@1x.png 1x, images/fat-cat-tablet@2x.png 2x">
+            <img class="example__slider-img example__slider-img--fat-cat" src="images/fat-cat-mobile@1x.png" srcset="images/fat-cat-mobile@2x.png 2x" width="280" height="256" alt="Сравнение кота до и после применения питания - пухлый кот">
+          </picture>
+          <picture>
+            <source media="(min-width: 768px)" width="560" height="512" type="image/png" srcset="images/thin-cat-tablet@1x.png 1x, images/thin-cat-tablet@2x.png 2x">
+            <img class="example__slider-img example__slider-img--thin-cat" src="images/thin-cat-mobile@1x.png" srcset="images/thin-cat-mobile@2x.png 2x" width="280" height="256" alt="Сравнение кота до и после применения питания - спортивный кот">
+          </picture>
+        </div>
       </div>
     </section>
 
@@ -119,7 +141,13 @@
       <div class="screen-stretch__wrapper">
         <h3 class="main-contacts__title">Приглашаем к сотрудничеству дилеров!</h3>
         <address class="main-contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
-        <img src="images/map.png" width="320" height="362" alt="Карта с указанием адреса офиса">
+
+        <picture>
+          <source media="(min-width: 1440px)" width="1440" height="400" type="image/png" srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" width="768" height="400" type="image/png" srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png 2x">
+          <img class="main-contacts-map" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320" height="362" alt="Карта с указанием адреса офиса">
+        </picture>
+
       </div>
     </section>
   </main>
@@ -127,7 +155,9 @@
   <footer class="main-footer">
     <div class="screen-stretch__wrapper">
       <a class="main-footer__logo" href="#">
-        <img class="main-footer__logo-text logo-text" src="/images/logo-text.svg" width="100" height="18" alt="Текстовое название логотипа Кэт Энерджи">
+        <picture>
+          <img class="logo-text" src="images/logo-text-mobile.svg" width="128" height="24" alt="Текстовое название логотипа Кэт Энерджи">
+        </picture>
       </a>
 
       <div class="main-footer__social social">
