Добавила в scss блоки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -71,13 +71,13 @@
               <a class="product-card__link" href="#">
                 <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
               </a>
-              <dl class="product-card__param product-filter">
-                <dt class="product-filter__name filter-weight">Масса</dt>
-                <dd class="product-filter__value filter-weight">500 г</dd>
-                <dt class="product-filter__name filter-taste">Вкус</dt>
-                <dd class="product-filter__value filter-taste">Курица</dd>
-                <dt class="product-filter__name filter-price">Цена</dt>
-                <dd class="product-filter__value filter-price">700 ₽</dd>
+              <dl class="product-card__param filter">
+                <dt class="filter__name filter__name--weight">Масса</dt>
+                <dd class="filter__value filter__value--weight">500 г</dd>
+                <dt class="filter__name filter__name--taste">Вкус</dt>
+                <dd class="filter__value filter__value--taste">Курица</dd>
+                <dt class="filter__name filter__name--price">Цена</dt>
+                <dd class="filter__value filter__value--price">700 ₽</dd>
               </dl>
               <a class="product-card__button" href="#">Заказать</a>
             </li>
@@ -94,13 +94,13 @@
               <a class="product-card__link" href="#">
                 <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
               </a>
-              <dl class="product-card__param product-filter">
-                <dt class="product-filter__name filter-weight">Масса</dt>
-                <dd class="product-filter__value filter-weight">1000 г</dd>
-                <dt class="product-filter__name filter-taste">Вкус</dt>
-                <dd class="product-filter__value filter-taste">Курица</dd>
-                <dt class="product-filter__name filter-price">Цена</dt>
-                <dd class="product-filter__value filter-price">1000 ₽</dd>
+              <dl class="product-card__param filter">
+                <dt class="filter__name filter__name--weight">Масса</dt>
+                <dd class="filter__value filter__value--weight">1000 г</dd>
+                <dt class="filter__name filter__name--taste">Вкус</dt>
+                <dd class="filter__value filter__value--taste">Курица</dd>
+                <dt class="filter__name filter__name--price">Цена</dt>
+                <dd class="filter__value filter__value--price">1000 ₽</dd>
               </dl>
               <a class="product-card__button" href="#">Заказать</a>
             </li>
@@ -116,115 +116,115 @@
               <a class="product-card__link" href="#">
                 <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
               </a>
-              <dl class="product-card__param product-filter">
-                <dt class="product-filter__name filter-weight">Масса</dt>
-                <dd class="product-filter__value filter-weight">500 г</dd>
-                <dt class="product-filter__name filter-taste">Вкус</dt>
-                <dd class="product-filter__value filter-taste">Рыба</dd>
-                <dt class="product-filter__name filter-price">Цена</dt>
-                <dd class="product-filter__value filter-price">700 ₽</dd>
+              <dl class="product-card__param filter">
+                <dt class="filter__name filter__name--weight">Масса</dt>
+                <dd class="filter__value filter__value--weight">500 г</dd>
+                <dt class="filter__name filter__name--taste">Вкус</dt>
+                <dd class="filter__value filter__value--taste">Рыба</dd>
+                <dt class="filter__name filter__name--price">Цена</dt>
+                <dd class="filter__value filter__value--price">700 ₽</dd>
               </dl>
               <a class="product-card__button" href="#">Заказать</a>
             </li>
 
             <!-- card-4 -->
             <li class="product-card">
-              <a class="product-card-link" href="#">
+              <a class="product-card__link" href="#">
                 <picture>
                   <source media="(min-width: 1440px)" width="172" height="196" type="image/png" srcset="images/catalog-pro-1000-fish-desktop@1x.png 1x, images/catalog-pro-1000-fish-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" width="168" height="206" type="image/png" srcset="images/catalog-pro-1000-fish-tablet@1x.png 1x, images/catalog-pro-1000-fish-tablet@2x.png 2x">
                   <img class="product-card__image" src="images/catalog-pro-1000-fish-mobile@1x.png" srcset="images/catalog-pro-1000-fish-mobile@2x.png 2x" width="84" height="100" alt="Питание 1000 гр с рыбой">
                 </picture>
               </a>
-              <a class="product-card-link" href="#">
-                <h3 class="product-card-title">Cat Energy PRO 1000 г</h3>
+              <a class="product-card__link" href="#">
+                <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
               </a>
-              <dl class="product-card__param product-filter">
-                <dt class="product-filter__name filter-weight">Масса</dt>
-                <dd class="product-filter__value filter-weight">1000 г</dd>
-                <dt class="product-filter__name filter-taste">Вкус</dt>
-                <dd class="product-filter__value filter-taste">Рыба</dd>
-                <dt class="product-filter__name filter-price">Цена</dt>
-                <dd class="product-filter__value filter-price">1000 ₽</dd>
+              <dl class="product-card__param filter">
+                <dt class="filter__name filter__name--weight">Масса</dt>
+                <dd class="filter__value filter__value--weight">1000 г</dd>
+                <dt class="filter__name filter__name--taste">Вкус</dt>
+                <dd class="filter__value filter__value--taste">Рыба</dd>
+                <dt class="filter__name filter__name--price">Цена</dt>
+                <dd class="filter__value filter__value--price">1000 ₽</dd>
               </dl>
               <a class="product-card__button" href="#">Заказать</a>
             </li>
 
             <!-- card-5 -->
             <li class="product-card">
-              <a class="product-card-link" href="#">
+              <a class="product-card__link" href="#">
                 <picture>
                   <source media="(min-width: 768px)" width="161" height="172" type="image/png" srcset="images/catalog-slim-500-buckwheat-tablet@1x.png 1x, images/catalog-slim-500-buckwheat-tablet@2x.png 2x">
                   <img class="product-card__image" src="images/catalog-slim-500-buckwheat-mobile@1x.png" srcset="images/catalog-slim-500-buckwheat-mobile@2x.png 2x" width="68" height="86" alt="Питание 500гр с гречкой">
                 </picture>
               </a>
-              <a class="product-card-link" href="#">
-                <h3 class="product-card-title">Cat Energy SLIM 500 г</h3>
+              <a class="product-card__link" href="#">
+                <h3 class="product-card__title">Cat Energy SLIM 500 г</h3>
               </a>
-              <dl class="product-card__param product-filter">
-                <dt class="product-filter__name filter-weight">Масса</dt>
-                <dd class="product-filter__value filter-weight">500 г</dd>
-                <dt class="product-filter__name filter-taste">Вкус</dt>
-                <dd class="product-filter__value filter-taste">Гречка</dd>
-                <dt class="product-filter__name filter-price">Цена</dt>
-                <dd class="product-filter__value filter-price">400 ₽</dd>
+              <dl class="product-card__param filter">
+                <dt class="filter__name filter__name--weight">Масса</dt>
+                <dd class="filter__value filter__value--weight">500 г</dd>
+                <dt class="filter__name filter__name--taste">Вкус</dt>
+                <dd class="filter__value filter__value--taste">Гречка</dd>
+                <dt class="filter__name filter__name--price">Цена</dt>
+                <dd class="filter__value filter__value--price">400 ₽</dd>
               </dl>
               <a class="product-card__button" href="#">Заказать</a>
             </li>
 
             <!-- card-6 -->
             <li class="product-card">
-              <a class="product-card-link" href="#">
+              <a class="product-card__link" href="#">
                 <picture>
                   <source media="(min-width: 1440px)" width="172" height="196" type="image/png" srcset="images/catalog-slim-1000-buckwheat-desktop@1x.png 1x, images/catalog-slim-1000-buckwheat-desktop@2x.png 2x">
                   <source media="(min-width: 768px)" width="168" height="206" type="image/png" srcset="images/catalog-slim-1000-buckwheat-tablet@1x.png 1x, images/catalog-slim-1000-buckwheat-tablet@2x.png 2x">
                   <img class="product-card__image" src="images/catalog-slim-1000-buckwheat-mobile@1x.png" srcset="images/catalog-slim-1000-buckwheat-mobile@2x.png 2x" width="84" height="100" alt="Питание 1000 гр с гречкой">
                 </picture>
               </a>
-              <a class="product-card-link" href="#">
-                <h3 class="product-card-title">Cat Energy SLIM 1000 г</h3>
+              <a class="product-card__link" href="#">
+                <h3 class="product-card__title">Cat Energy SLIM 1000 г</h3>
               </a>
-              <dl class="product-card__param product-filter">
-                <dt class="product-filter__name filter-weight">Масса</dt>
-                <dd class="product-filter__value filter-weight">1000 г</dd>
-                <dt class="product-filter__name filter-taste">Вкус</dt>
-                <dd class="product-filter__value filter-taste">Гречка</dd>
-                <dt class="product-filter__name filter-price">Цена</dt>
-                <dd class="product-filter__value filter-price">700 ₽</dd>
+              <dl class="product-card__param filter">
+                <dt class="filter__name filter__name--weight">Масса</dt>
+                <dd class="filter__value filter__value--weight">1000 г</dd>
+                <dt class="filter__name filter__name--taste">Вкус</dt>
+                <dd class="filter__value filter__value--taste">Гречка</dd>
+                <dt class="filter__name filter__name--price">Цена</dt>
+                <dd class="filter__value filter__value--price">700 ₽</dd>
               </dl>
               <a class="product-card__button" href="#">Заказать</a>
             </li>
 
             <!-- card-7 -->
             <li class="product-card">
-              <a class="product-card-link" href="#">
+              <a class="product-card__link" href="#">
                 <picture>
                   <source media="(min-width: 768px)" width="161" height="172" type="image/png" srcset="images/catalog-slim-500-rice-tablet@1x.png 1x, images/catalog-slim-500-rice-tablet@2x.png 2x">
                   <img class="product-card__image" src="images/catalog-slim-500-rice-mobile@1x.png" srcset="images/catalog-slim-500-rice-mobile@2x.png 2x" width="68" height="86" alt="Питание 500гр с рисом">
                 </picture>
               </a>
-              <a class="product-card-link" href="#">
-                <h3 class="product-card-title">Cat Energy SLIM 500 г</h3>
+              <a class="product-card__link" href="#">
+                <h3 class="product-card__title">Cat Energy SLIM 500 г</h3>
               </a>
-              <dl class="product-card__param product-filter">
-                <dt class="product-filter__name filter-weight">Масса</dt>
-                <dd class="product-filter__value filter-weight">500 г</dd>
-                <dt class="product-filter__name filter-taste">Вкус</dt>
-                <dd class="product-filter__value filter-taste">Рис</dd>
-                <dt class="product-filter__name filter-price">Цена</dt>
-                <dd class="product-filter__value filter-price">500 ₽</dd>
+              <dl class="product-card__param filter">
+                <dt class="filter__name filter__name--weight">Масса</dt>
+                <dd class="filter__value filter__value--weight">500 г</dd>
+                <dt class="filter__name filter__name--taste">Вкус</dt>
+                <dd class="filter__value filter__value--taste">Рис</dd>
+                <dt class="filter__name filter__name--price">Цена</dt>
+                <dd class="filter__value filter__value--price">500 ₽</dd>
               </dl>
               <a class="product-card__button" href="#">Заказать</a>
             </li>
 
             <li class="product-all-cards">
-              <a class="product-all-cards-link" href="#">
-                <h3 class="product-all-catalog link-all-product-cards">Показать еще 100500 товаров</h3>
+              <a class="product-all-cards__link" href="#">
+                <h3 class="product-all-cards__catalog product-all-cards__catalog--link">Показать еще 100500 товаров</h3>
               </a>
               <a class="product-all-cards-link" href="#">
-                <p class="products-all-catalog description-all-catalog">На самом деле вкусов гораздо больше!</p>
+                <p class="products-all-cards__catalog product-all-cards__catalog--description">На самом деле вкусов гораздо больше!</p>
               </a>
-              <a class="product-all-cards-button" href="#">Показать все</a>
+              <a class="product-all-cards__button" href="#">Показать все</a>
             </li>
 
           </ul>
@@ -241,8 +241,8 @@
                 <h3 class="product-card__title">Сахарозаменитель</h3>
               </a>
               <dl class="product-card__param filter">
-                <dt class="filter__name filter-weight">1 упаковка (100 г)</dt>
-                <dd class="filter__value filter-price">200 ₽</dd>
+                <dt class="filter__name filter__name--weight">1 упаковка (100 г)</dt>
+                <dd class="filter__value filter__value--price">200 ₽</dd>
               </dl>
               <a class="product-card__button" href="#">Заказать</a>
             </li>
@@ -252,8 +252,8 @@
                 <h3 class="product-card__title">Питьевая вода</h3>
               </a>
               <dl class="product-card__param filter">
-                <dt class="filter__name filter-weight">5 литров</dt>
-                <dd class="filter__value filter-price">50 ₽</dd>
+                <dt class="filter__name filter__name--weight">5 литров</dt>
+                <dd class="filter__value filter__value--price">50 ₽</dd>
               </dl>
               <a class="product-card__button" href="#">Заказать</a>
             </li>
@@ -263,8 +263,8 @@
                 <h3 class="product-card__title">Молоко</h3>
               </a>
               <dl class="product-card__param filter">
-                <dt class="filter__name filter-weight">1 литр</dt>
-                <dd class="filter__value filter-price">100 ₽</dd>
+                <dt class="filter__name filter__name--weight">1 литр</dt>
+                <dd class="filter__value filter__value--price">100 ₽</dd>
               </dl>
               <a class="product-card__button" href="#">Заказать</a>
             </li>
@@ -274,8 +274,8 @@
                 <h3 class="product-card__title">Витамины</h3>
               </a>
               <dl class="product-card__param filter">
-                <dt class="filter__name filter-weight">1 упаковка (30 г)</dt>
-                <dd class="filter__value filter-price">300 ₽</dd>
+                <dt class="filter__name filter__name--weight">1 упаковка (30 г)</dt>
+                <dd class="filter__value filter__value--price">300 ₽</dd>
               </dl>
               <a class="product-card__button" href="#">Заказать</a>
             </li>
@@ -297,7 +297,7 @@
           <form class="newsletter__form form-subscribe" action="https://echo.htmlacademy.ru/" method="post">
             <label class="visually-hidden" for="newsletter-email">E-mail</label>
             <input class="form-subscribe__mail-field-white" type="email" name="newsletter-email" id="newsletter-email" placeholder="кuklachev@gmail.com" required>
-            <button class="form-subscribe__newsletter-button blue-button" type="submit">
+            <button class="form-subscribe__newsletter-button button" type="submit">
               <span>Подписаться</span>
             </button>
           </form>
