--- a/source/catalog.html
+++ b/source/catalog.html
@@ -18,12 +18,12 @@
     <div class="screen-stretch__wrapper">
       <a class="main-header__logo" href="index.html">
         <picture>
-          <source media="(min-width: 1400px)" width="70" height="60" type="image/svg+xml" srcset="images/logo-pic-desktop.svg">
+          <source media="(min-width: 1400px)" width="70" height="60" type="image/svg+xml" srcset="images/logo-pic-pc.svg">
           <source media="(min-width: 768px)" width="50" height="60" type="image/svg+xml" srcset="images/logo-pic-tablet.svg">
           <img class="logo-pic" src="images/logo-pic-mobile.svg" width="33" height="38" alt="Иконка логотипа Кэт Энерджи">
         </picture>
         <picture>
-          <source media="(min-width: 1400px)" width="118" height="20" type="image/svg+xml" srcset="images/logo-text-desktop.svg">
+          <source media="(min-width: 1400px)" width="118" height="20" type="image/svg+xml" srcset="images/logo-text-pc.svg">
           <source media="(min-width: 768px)" width="100" height="18" type="image/svg+xml" srcset="images/logo-text-tablet.svg">
           <img class="logo-text" src="images/logo-text-mobile.svg" width="100" height="20" alt="Текстовое название логотипа Кэт Энерджи">
         </picture>
@@ -86,7 +86,7 @@
             <li class="product-card">
               <a class="product-card__link" href="#">
                 <picture>
-                  <source media="(min-width: 1440px)" width="172" height="196" type="image/png" srcset="images/catalog-pro-1000-chicken-desktop@1x.png 1x, images/catalog-pro-1000-chicken-desktop@2x.png 2x">
+                  <source media="(min-width: 1440px)" width="172" height="196" type="image/png" srcset="images/catalog-pro-1000-chicken-pc@1x.png 1x, images/catalog-pro-1000-chicken-pc@2x.png 2x">
                   <source media="(min-width: 768px)" width="168" height="206" type="image/png" srcset="images/catalog-pro-1000-chicken-tablet@1x.png 1x, images/catalog-pro-1000-chicken-tablet@2x.png 2x">
                   <img class="product-card__image" src="images/catalog-pro-1000-chicken-mobile@1x.png" srcset="images/catalog-pro-1000-chicken-mobile@2x.png 2x" width="84" height="100" alt="Питание 1000 гр с курицей">
                 </picture>
@@ -131,7 +131,7 @@
             <li class="product-card">
               <a class="product-card__link" href="#">
                 <picture>
-                  <source media="(min-width: 1440px)" width="172" height="196" type="image/png" srcset="images/catalog-pro-1000-fish-desktop@1x.png 1x, images/catalog-pro-1000-fish-desktop@2x.png 2x">
+                  <source media="(min-width: 1440px)" width="172" height="196" type="image/png" srcset="images/catalog-pro-1000-fish-pc@1x.png 1x, images/catalog-pro-1000-fish-pc@2x.png 2x">
                   <source media="(min-width: 768px)" width="168" height="206" type="image/png" srcset="images/catalog-pro-1000-fish-tablet@1x.png 1x, images/catalog-pro-1000-fish-tablet@2x.png 2x">
                   <img class="product-card__image" src="images/catalog-pro-1000-fish-mobile@1x.png" srcset="images/catalog-pro-1000-fish-mobile@2x.png 2x" width="84" height="100" alt="Питание 1000 гр с рыбой">
                 </picture>
@@ -176,7 +176,7 @@
             <li class="product-card">
               <a class="product-card__link" href="#">
                 <picture>
-                  <source media="(min-width: 1440px)" width="172" height="196" type="image/png" srcset="images/catalog-slim-1000-buckwheat-desktop@1x.png 1x, images/catalog-slim-1000-buckwheat-desktop@2x.png 2x">
+                  <source media="(min-width: 1440px)" width="172" height="196" type="image/png" srcset="images/catalog-slim-1000-buckwheat-tablet-pc@1x.png 1x, images/catalog-slim-1000-buckwheat-tablet-pc@2x.png 2x">
                   <source media="(min-width: 768px)" width="168" height="206" type="image/png" srcset="images/catalog-slim-1000-buckwheat-tablet@1x.png 1x, images/catalog-slim-1000-buckwheat-tablet@2x.png 2x">
                   <img class="product-card__image" src="images/catalog-slim-1000-buckwheat-mobile@1x.png" srcset="images/catalog-slim-1000-buckwheat-mobile@2x.png 2x" width="84" height="100" alt="Питание 1000 гр с гречкой">
                 </picture>
@@ -309,7 +309,7 @@
           <h3 class="main-contacts__title">Приглашаем к сотрудничеству дилеров!</h3>
           <address class="main-contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
           <picture>
-            <source media="(min-width: 1440px)" width="1440" height="400" type="image/png" srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png 2x">
+            <source media="(min-width: 1440px)" width="1440" height="400" type="image/png" srcset="images/map-pc@1x.png 1x, images/map-pc@2x.png 2x">
             <source media="(min-width: 768px)" width="768" height="400" type="image/png" srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png 2x">
             <img class="main-contacts-map" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320" height="362" alt="Карта с указанием адреса офиса">
           </picture>
