--- a/source/index.html
+++ b/source/index.html
@@ -18,12 +18,12 @@
     <div class="screen-stretch__wrapper">
       <a class="main-header__logo" href="#">
         <picture>
-          <source media="(min-width: 1400px)" width="70" height="60" type="image/svg+xml" srcset="images/logo-pic-desktop.svg">
+          <source media="(min-width: 1400px)" width="70" height="60" type="image/svg+xml" srcset="images/logo-pic-pc.svg">
           <source media="(min-width: 768px)" width="50" height="60" type="image/svg+xml" srcset="images/logo-pic-tablet.svg">
           <img class="logo-pic" src="images/logo-pic-mobile.svg" width="33" height="38" alt="Иконка логотипа Кэт Энерджи">
         </picture>
         <picture>
-          <source media="(min-width: 1400px)" width="118" height="20" type="image/svg+xml" srcset="images/logo-text-desktop.svg">
+          <source media="(min-width: 1400px)" width="118" height="20" type="image/svg+xml" srcset="images/logo-text-pc.svg">
           <source media="(min-width: 768px)" width="100" height="18" type="image/svg+xml" srcset="images/logo-text-tablet.svg">
           <img class="logo-text" src="images/logo-text-mobile.svg" width="100" height="20" alt="Текстовое название логотипа Кэт Энерджи">
         </picture>
@@ -63,12 +63,12 @@
           <p class="nutrition-programs__description">Занялся собой? Займись котом!</p>
 
           <picture>
-            <source media="(min-width: 1440px)" width="552" height="500" type="image/png" srcset="images/index-can-desktop@1x.png 1x, images/index-can-desktop@2x.png 2x">
+            <source media="(min-width: 1440px)" width="552" height="500" type="image/png" srcset="images/index-can-pc@1x.png 1x, images/index-can-pc@2x.png 2x">
             <source media="(min-width: 768px)" width="710" height="610" type="image/png" srcset="images/index-can-tablet@1x.png 1x, images/index-can-tablet@2x.png 2x">
             <img class="nutrition-programs__img" src="images/index-can-mobile@1x.png" srcset="images/index-can-mobile@2x.png 2x" width="280" height="270" alt="Упаковка питания Кэт Энерджи с курицей">
           </picture>
 
-          <button class="nutrition-programs__button" type="button">Подобрать программу</button>
+          <a class="nutrition-programs__button button" href="#">Подобрать программу</a>
         </header>
       </div>
     </section>
@@ -147,7 +147,7 @@
         <address class="main-contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
 
         <picture>
-          <source media="(min-width: 1440px)" width="1440" height="400" type="image/png" srcset="images/map-desktop@1x.png 1x, images/map-desktop@2x.png 2x">
+          <source media="(min-width: 1440px)" width="1440" height="400" type="image/png" srcset="images/map-pc@1x.png 1x, images/map-pc@2x.png 2x">
           <source media="(min-width: 768px)" width="768" height="400" type="image/png" srcset="images/map-tablet@1x.png 1x, images/map-tablet@2x.png 2x">
           <img class="main-contacts-map" src="images/map-mobile@1x.png" srcset="images/map-mobile@2x.png 2x" width="320" height="362" alt="Карта с указанием адреса офиса">
         </picture>
