Начало стилизации шрифтов

--- a/source/index.html
+++ b/source/index.html
@@ -35,19 +35,13 @@
         <div class="main-nav__wrapper">
           <ul class="main-nav__list menu-list">
             <li class="menu-list__item menu-list__item--current">
-              <a href="#">
-                Главная
-              </a>
+              <a href="#">Главная</a>
             </li>
             <li class="menu-list__item">
-              <a href="catalog.html">
-                Каталог продукции
-              </a>
+              <a href="catalog.html">Каталог продукции</a>
             </li>
             <li class="menu-list__item">
-              <a href="#">
-                Подбор программы
-              </a>
+              <a href="programs.html">Подбор программы</a>
             </li>
           </ul>
         </div>
@@ -79,12 +73,12 @@
         <div class="categories-card">
           <h3 class="categories-card__title">Похудение</h3>
           <p class="categories-card__description">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
-          <a class="categories-card__link" href="#">Каталог SLIM</a>
+          <a class="categories-card__link" href="catalog/slim.html">Каталог SLIM</a>
         </div>
         <div class="categories-card">
           <h3 class="categories-card__title">Набор массы</h3>
           <p class="categories-card__description">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!</p>
-          <a class="categories-card__link" href="#">Каталог PRO</a>
+          <a class="categories-card__link" href="catalog/pro.html">Каталог PRO</a>
         </div>
       </div>
     </section>
