--- a/source/catalog.html
+++ b/source/catalog.html
@@ -43,7 +43,7 @@
               <a href="catalog.html">Каталог продукции</a>
             </li>
             <li class="menu-list__item">
-              <a href="#">Подбор программы</a>
+              <a href="programs.html">Подбор программы</a>
             </li>
           </ul>
         </div>
@@ -62,13 +62,13 @@
           <ul class="main-products__list">
             <!-- card-1 -->
             <li class="product-card">
-              <a class="product-card__link" href="#">
+              <a class="product-card__link" href="catalog/pro-500-chicken.html">
                 <picture>
                   <source media="(min-width: 768px)" width="161" height="172" type="image/png" srcset="images/catalog-pro-500-chicken-tablet@1x.png 1x, images/catalog-pro-500-chicken-tablet@2x.png 2x">
                   <img class="product-card__image" src="images/catalog-pro-500-chicken-mobile@1x.png" srcset="images/catalog-pro-500-chicken-mobile@2x.png 2x" width="68" height="86" alt="Питание 500 гр с курицей">
                 </picture>
               </a>
-              <a class="product-card__link" href="#">
+              <a class="product-card__link" href="catalog/pro-500-chicken.html">
                 <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
               </a>
               <dl class="product-card__param filter">
@@ -79,19 +79,19 @@
                 <dt class="filter__name filter__name--price">Цена</dt>
                 <dd class="filter__value filter__value--price">700 ₽</dd>
               </dl>
-              <a class="product-card__button" href="#">Заказать</a>
+              <a class="product-card__button button" href="catalog/create-order.html">Заказать</a>
             </li>
 
             <!-- card-2 -->
             <li class="product-card">
-              <a class="product-card__link" href="#">
+              <a class="product-card__link" href="catalog/pro-1000-chicken.html">
                 <picture>
                   <source media="(min-width: 1440px)" width="172" height="196" type="image/png" srcset="images/catalog-pro-1000-chicken-pc@1x.png 1x, images/catalog-pro-1000-chicken-pc@2x.png 2x">
                   <source media="(min-width: 768px)" width="168" height="206" type="image/png" srcset="images/catalog-pro-1000-chicken-tablet@1x.png 1x, images/catalog-pro-1000-chicken-tablet@2x.png 2x">
                   <img class="product-card__image" src="images/catalog-pro-1000-chicken-mobile@1x.png" srcset="images/catalog-pro-1000-chicken-mobile@2x.png 2x" width="84" height="100" alt="Питание 1000 гр с курицей">
                 </picture>
               </a>
-              <a class="product-card__link" href="#">
+              <a class="product-card__link" href="catalog/pro-1000-chicken.html">
                 <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
               </a>
               <dl class="product-card__param filter">
@@ -102,18 +102,18 @@
                 <dt class="filter__name filter__name--price">Цена</dt>
                 <dd class="filter__value filter__value--price">1000 ₽</dd>
               </dl>
-              <a class="product-card__button" href="#">Заказать</a>
+              <a class="product-card__button button" href="catalog/create-order.html">Заказать</a>
             </li>
 
             <!-- card-3 -->
             <li class="product-card">
-              <a class="product-card__link" href="#">
+              <a class="product-card__link" href="catalog/pro-500-fish.html">
                 <picture>
                   <source media="(min-width: 768px)" width="161" height="172" type="image/png" srcset="images/catalog-pro-500-fish-tablet@1x.png 1x, images/catalog-pro-500-fish-tablet@2x.png 2x">
                   <img class="product-card__image" src="images/catalog-pro-500-fish-mobile@1x.png" srcset="images/catalog-pro-500-fish-mobile@2x.png 2x" width="68" height="86" alt="Питание 500гр с рыбой">
                 </picture>
               </a>
-              <a class="product-card__link" href="#">
+              <a class="product-card__link" href="catalog/pro-500-fish.html">
                 <h3 class="product-card__title">Cat Energy PRO 500 г</h3>
               </a>
               <dl class="product-card__param filter">
@@ -124,19 +124,19 @@
                 <dt class="filter__name filter__name--price">Цена</dt>
                 <dd class="filter__value filter__value--price">700 ₽</dd>
               </dl>
-              <a class="product-card__button" href="#">Заказать</a>
+              <a class="product-card__button button" href="catalog/create-order.html">Заказать</a>
             </li>
 
             <!-- card-4 -->
             <li class="product-card">
-              <a class="product-card__link" href="#">
+              <a class="product-card__link" href="catalog/pro-1000-fish.html">
                 <picture>
                   <source media="(min-width: 1440px)" width="172" height="196" type="image/png" srcset="images/catalog-pro-1000-fish-pc@1x.png 1x, images/catalog-pro-1000-fish-pc@2x.png 2x">
                   <source media="(min-width: 768px)" width="168" height="206" type="image/png" srcset="images/catalog-pro-1000-fish-tablet@1x.png 1x, images/catalog-pro-1000-fish-tablet@2x.png 2x">
                   <img class="product-card__image" src="images/catalog-pro-1000-fish-mobile@1x.png" srcset="images/catalog-pro-1000-fish-mobile@2x.png 2x" width="84" height="100" alt="Питание 1000 гр с рыбой">
                 </picture>
               </a>
-              <a class="product-card__link" href="#">
+              <a class="product-card__link" href="catalog/pro-1000-fish.html">
                 <h3 class="product-card__title">Cat Energy PRO 1000 г</h3>
               </a>
               <dl class="product-card__param filter">
@@ -147,18 +147,18 @@
                 <dt class="filter__name filter__name--price">Цена</dt>
                 <dd class="filter__value filter__value--price">1000 ₽</dd>
               </dl>
-              <a class="product-card__button" href="#">Заказать</a>
+              <a class="product-card__button button" href="catalog/create-order.html">Заказать</a>
             </li>
 
             <!-- card-5 -->
             <li class="product-card">
-              <a class="product-card__link" href="#">
+              <a class="product-card__link" href="catalog/slim-500-buckwheat.html">
                 <picture>
                   <source media="(min-width: 768px)" width="161" height="172" type="image/png" srcset="images/catalog-slim-500-buckwheat-tablet@1x.png 1x, images/catalog-slim-500-buckwheat-tablet@2x.png 2x">
                   <img class="product-card__image" src="images/catalog-slim-500-buckwheat-mobile@1x.png" srcset="images/catalog-slim-500-buckwheat-mobile@2x.png 2x" width="68" height="86" alt="Питание 500гр с гречкой">
                 </picture>
               </a>
-              <a class="product-card__link" href="#">
+              <a class="product-card__link" href="catalog/slim-500-buckwheat.html">
                 <h3 class="product-card__title">Cat Energy SLIM 500 г</h3>
               </a>
               <dl class="product-card__param filter">
@@ -169,19 +169,19 @@
                 <dt class="filter__name filter__name--price">Цена</dt>
                 <dd class="filter__value filter__value--price">400 ₽</dd>
               </dl>
-              <a class="product-card__button" href="#">Заказать</a>
+              <a class="product-card__button button" href="catalog/create-order.html">Заказать</a>
             </li>
 
             <!-- card-6 -->
             <li class="product-card">
-              <a class="product-card__link" href="#">
+              <a class="product-card__link" href="catalog/slim-1000-buckwheat.html">
                 <picture>
                   <source media="(min-width: 1440px)" width="172" height="196" type="image/png" srcset="images/catalog-slim-1000-buckwheat-tablet-pc@1x.png 1x, images/catalog-slim-1000-buckwheat-tablet-pc@2x.png 2x">
                   <source media="(min-width: 768px)" width="168" height="206" type="image/png" srcset="images/catalog-slim-1000-buckwheat-tablet@1x.png 1x, images/catalog-slim-1000-buckwheat-tablet@2x.png 2x">
                   <img class="product-card__image" src="images/catalog-slim-1000-buckwheat-mobile@1x.png" srcset="images/catalog-slim-1000-buckwheat-mobile@2x.png 2x" width="84" height="100" alt="Питание 1000 гр с гречкой">
                 </picture>
               </a>
-              <a class="product-card__link" href="#">
+              <a class="product-card__link" href="catalog/slim-1000-buckwheat.html">
                 <h3 class="product-card__title">Cat Energy SLIM 1000 г</h3>
               </a>
               <dl class="product-card__param filter">
@@ -192,18 +192,18 @@
                 <dt class="filter__name filter__name--price">Цена</dt>
                 <dd class="filter__value filter__value--price">700 ₽</dd>
               </dl>
-              <a class="product-card__button" href="#">Заказать</a>
+              <a class="product-card__button button" href="catalog/create-order.html">Заказать</a>
             </li>
 
             <!-- card-7 -->
             <li class="product-card">
-              <a class="product-card__link" href="#">
+              <a class="product-card__link" href="catalog/slim-500-rice.html">
                 <picture>
                   <source media="(min-width: 768px)" width="161" height="172" type="image/png" srcset="images/catalog-slim-500-rice-tablet@1x.png 1x, images/catalog-slim-500-rice-tablet@2x.png 2x">
                   <img class="product-card__image" src="images/catalog-slim-500-rice-mobile@1x.png" srcset="images/catalog-slim-500-rice-mobile@2x.png 2x" width="68" height="86" alt="Питание 500гр с рисом">
                 </picture>
               </a>
-              <a class="product-card__link" href="#">
+              <a class="product-card__link" href="catalog/slim-500-rice.html">
                 <h3 class="product-card__title">Cat Energy SLIM 500 г</h3>
               </a>
               <dl class="product-card__param filter">
@@ -214,7 +214,7 @@
                 <dt class="filter__name filter__name--price">Цена</dt>
                 <dd class="filter__value filter__value--price">500 ₽</dd>
               </dl>
-              <a class="product-card__button" href="#">Заказать</a>
+              <a class="product-card__button button" href="catalog/create-order.html">Заказать</a>
             </li>
 
             <li class="product-all-cards">
@@ -224,7 +224,7 @@
               <a class="product-all-cards-link" href="#">
                 <p class="products-all-cards__catalog product-all-cards__catalog--description">На самом деле вкусов гораздо больше!</p>
               </a>
-              <a class="product-all-cards__button" href="#">Показать все</a>
+              <a class="product-all-cards__button" href="catalog/new-goods.html">Показать все</a>
             </li>
 
           </ul>
@@ -244,7 +244,7 @@
                 <dt class="filter__name filter__name--weight">1 упаковка (100 г)</dt>
                 <dd class="filter__value filter__value--price">200 ₽</dd>
               </dl>
-              <a class="product-card__button" href="#">Заказать</a>
+              <a class="product-card__button button" href="#">Заказать</a>
             </li>
 
             <li class="product-card">
@@ -255,7 +255,7 @@
                 <dt class="filter__name filter__name--weight">5 литров</dt>
                 <dd class="filter__value filter__value--price">50 ₽</dd>
               </dl>
-              <a class="product-card__button" href="#">Заказать</a>
+              <a class="product-card__button button" href="#">Заказать</a>
             </li>
 
             <li class="product-card">
@@ -266,7 +266,7 @@
                 <dt class="filter__name filter__name--weight">1 литр</dt>
                 <dd class="filter__value filter__value--price">100 ₽</dd>
               </dl>
-              <a class="product-card__button" href="#">Заказать</a>
+              <a class="product-card__button button" href="#">Заказать</a>
             </li>
 
             <li class="product-card">
@@ -277,7 +277,7 @@
                 <dt class="filter__name filter__name--weight">1 упаковка (30 г)</dt>
                 <dd class="filter__value filter__value--price">300 ₽</dd>
               </dl>
-              <a class="product-card__button" href="#">Заказать</a>
+              <a class="product-card__button button" href="#">Заказать</a>
             </li>
           </ul>
 
