--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,7 @@
 
 <body class="page__body">
   <header class="main-header">
-    <div class="screen-stretch__wrapper">
+    <div class="screen-stretch-wrapper">
       <a class="main-header__logo" href="#">
         <img class="main-header__logo-pic" src="/images/logo-pic.svg" width="33" height="38" alt="Иконка логотипа Кэт Энерджи">
         <img class="main-header__logo-text logo-text" src="/images/logo-text.svg" width="100" height="18" alt="Текстовое название логотипа Кэт Энерджи">
@@ -43,7 +43,7 @@
 
   <main class="main-container">
     <section class="nutrition-programs">
-      <div class="screen-stretch__wrapper">
+      <div class="screen-stretch-wrapper">
         <header class="nutrition-programs__header">
           <h1 class="nutrition-programs__title">Функциональное питание для котов</h1>
           <p class="nutrition-programs__description">Занялся собой? Займись котом!</p>
@@ -54,7 +54,7 @@
     </section>
 
     <section class="catalog-categories">
-      <div class="screen-stretch__wrapper">
+      <div class="screen-stretch-wrapper">
         <h2 class="visually-hidden">Категории каталога</h2>
         <div class="categories-card">
           <h3 class="categories-card__title">Похудение</h3>
@@ -70,7 +70,7 @@
     </section>
 
     <section class="method-application">
-      <div class="screen-stretch__wrapper">
+      <div class="screen-stretch-wrapper">
         <h2 class="method-application__title title-section">Как это работает</h2>
         <ol class="method-application__list">
           <li class="method-application__item method-application__item--step-one">
@@ -90,7 +90,7 @@
     </section>
 
     <section class="example">
-      <div class="screen-stretch__wrapper">
+      <div class="screen-stretch-wrapper">
         <h2 class="example__title title-section">Живой пример</h2>
         <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
         <dl class="example__statistics statistics">
@@ -122,7 +122,7 @@
     </section>
 
     <section class="main-contacts">
-      <div class="screen-stretch__wrapper">
+      <div class="screen-stretch-wrapper">
         <h3 class="main-contacts__title">Приглашаем к сотрудничеству дилеров!</h3>
         <address class="main-contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</address>
         <img src="images/map.png" width="320" height="362" alt="Карта с указанием адреса офиса">
@@ -131,7 +131,7 @@
   </main>
 
   <footer class="main-footer">
-    <div class="screen-stretch__wrapper">
+    <div class="screen-stretch-wrapper">
       <a class="main-footer__logo" href="#">
         <picture>
           <img class="logo-text" src="images/logo-text-mobile.svg" width="128" height="24" alt="Текстовое название логотипа Кэт Энерджи">
